<h5>1.56 Beta 1 [2021-01-20]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- added where conditions for plugins (goffy)
- fixed bug in plugin delete (goffy)
- transfered hard coded admin to templates (goffy)
- added plugins for wgteams, wgtimlines, wggallery, wgtransifex, wggithub, wgsitenotice (goffy)
- added plugins for xmnews, xmdocs (goffy)

<h5>1.55 Beta 3 [2021-01-14]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- remove htmlentities() in creating XML file (AxelF1977/mamba)

<h5>1.55 Beta 2 [2021-01-13]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- fix for XML file, https://github.com/XoopsModules25x/xsitemap/issues/15 (AxelF1977/mamba)

<h5>1.55 Beta 1 [2021-01-12]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- namespaces, cosmetics (geeronzero/mamba)
- PHP8 cosmetics (mamba)
- PhpDoc updates (mamba)
- initialize variables (mamba)
- Non-optimal regular expression  (mamba)

<h5>1.54 Final [2020-11-10]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 3
<hr>
- replaced index.html with index.php (geekwright/mamba)
- PHP 8 tests (mamba)
- code cosmetics (mamba)


<h5>1.54 RC-2 [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.3
<hr>
- Edit image off (aerograf)
- cosmetics  (aerograf)
- added removal of old tables on istall (mamba)
- namespaces, autoload (mamba)


<h5>1.54 RC-1 [2017-11-15]</h5>
<hr>
- added SCANDIR_SORT_NONE to scandir() (mamba)
- fixed folder links to images in style.css (mamba)
- added individual files for install/uninstall (mamba)
- added namespaces (mamba)
- moved functions to Utility class (mamba)
- added traits for Utility class (mamba)



<h5>1.54 Beta 1 [2017-05-02] - NOT RELEASED</h5>
<hr>
- added XsitemapUtility class (zyspec)
- added Addresses, AdsLight, AmReviews, AMS, eGuide, FmContent, Lexikon,
  MxDirectory, MyDownloads, MyWords, MyTube, PDLinks, Portfolio, Qpages,
  Recette, SmartFaq, SongList, TDMDownloads, TDMPictures, WfDownloads, WfLinks,