@@ -39,16 +39,19 @@ xoops_cp_header();
 $adminObject = Admin::getInstance();
 $adminObject->displayNavigation(basename(__FILE__));
 $pluginHandler = $helper->getHandler('Plugin');
-$obj = null;
+$pluginsObj = null;
+
+$templateMain = 'xsitemap_admin_plugins.tpl';
 
 $op = Request::getCmd('op', 'show_list_plugin');
 
 switch ($op) {
     case 'add_plugin':
         // Display the form
-        /** @var Plugin $obj */
-        $obj = $pluginHandler->create();
-        echo $obj->getForm();
+        /** @var Plugin $pluginsObj */
+        $pluginsObj = $pluginHandler->create();
+        $form = $pluginsObj->getForm();
+        $GLOBALS['xoopsTpl']->assign('form', $form->render());
         break;
     case 'save_plugin':
         if (!$GLOBALS['xoopsSecurity']->check()) {
@@ -56,16 +59,16 @@ switch ($op) {
         }
         $pluginId = Request::getInt('plugin_id', 0, 'POST');
         if (!empty($pluginId)) {
-            $obj = $pluginHandler->get($pluginId);
-            if (!$obj instanceof Plugin) { // passed Id for non-existent plugin so create new plugin
-                $obj = $pluginHandler->create();
+            $pluginsObj = $pluginHandler->get($pluginId);
+            if (!$pluginsObj instanceof Plugin) { // passed Id for non-existent plugin so create new plugin
+                $pluginsObj = $pluginHandler->create();
             }
         } else {
-            $obj = $pluginHandler->create();
+            $pluginsObj = $pluginHandler->create();
         }
         $timestamp_created   = strtotime(Request::getString('plugin_date_created', 0, 'POST'));
         $verif_plugin_online = (1 === Request::getInt('plugin_online', 0, 'POST')) ? 1 : 0;                    //Form plugin_online
-        $obj->setVars(
+        $pluginsObj->setVars(
             [
                 'plugin_name'         => Request::getString('plugin_name', '', 'POST'),                   //Form plugin_name
                 'plugin_mod_version'  => Request::getCmd('plugin_mod_version', '', 'POST'),               //Form plugin_mod_version
@@ -81,33 +84,35 @@ switch ($op) {
                 'plugin_online'       => $verif_plugin_online,
             ]                                            //Form plugin_online
         );
-        if ($pluginHandler->insert($obj)) {
+        if ($pluginHandler->insert($pluginsObj)) {
             $helper->redirect('admin/plugin.php?op=show_list_plugin', 2, _AM_XSITEMAP_FORMOK);
         }
         //require("../include/forms.php");
-        echo $obj->getHtmlErrors();
-        echo $obj->getForm();
+        $GLOBALS['xoopsTpl']->assign('error', $pluginsObj->getHtmlErrors());
+        $form = $pluginsObj->getForm();
+        $GLOBALS['xoopsTpl']->assign('form', $form->render());
         break;
     case 'edit_plugin':
-        $obj = $pluginHandler->get(Request::getInt('plugin_id'));
-        if ($obj instanceof Plugin) {
-            echo $obj->getForm();
+        $pluginsObj = $pluginHandler->get(Request::getInt('plugin_id'));
+        if ($pluginsObj instanceof Plugin) {
+            $form = $pluginsObj->getForm();
+            $GLOBALS['xoopsTpl']->assign('form', $form->render());
         } else {
-            echo _AM_XSITEMAP_ERROR_NO_PLUGIN;
+            $GLOBALS['xoopsTpl']->assign('error', \_AM_XSITEMAP_ERROR_NO_PLUGIN);
         }
         break;
     case 'delete_plugin':
-        $obj = $pluginHandler->get(Request::getInt('plugin_id', 0));
+        $pluginsObj = $pluginHandler->get(Request::getInt('plugin_id', 0));
         $ok  = Request::getInt('ok', 0, 'POST');
         if (1 == $ok) {
             //        if (\Xmf\Request::hasVar('ok', 'REQUEST[')) && $_REQUEST["ok"] == 1) {
             if (!$GLOBALS['xoopsSecurity']->check()) {
                 $helper->redirect('admin/plugin.php', 3, implode(',', $GLOBALS['xoopsSecurity']->getErrors()));
             }
-            if ($pluginHandler->delete($obj)) {
+            if ($pluginHandler->delete($pluginsObj)) {
                 $helper->redirect('admin/plugin.php', 3, _AM_XSITEMAP_FORMDELOK);
             } else {
-                echo $obj->getHtmlErrors();
+                $GLOBALS['xoopsTpl']->assign('error', $pluginsObj->getHtmlErrors());
             }
         } else {
             xoops_confirm(
@@ -117,38 +122,47 @@ switch ($op) {
                     'op'        => 'delete_plugin',
                 ],
                 $_SERVER['REQUEST_URI'],
-                sprintf(_AM_XSITEMAP_FORMSUREDEL, $obj->getVar('plugin_name'))
+                sprintf(_AM_XSITEMAP_FORMSUREDEL, $pluginsObj->getVar('plugin_name'))
             );
         }
         break;
     case 'update_online_plugin':
         if (\Xmf\Request::hasVar('plugin_id', 'REQUEST')) {
-            $obj = $pluginHandler->get(Request::getInt('plugin_id'));
+            $pluginsObj = $pluginHandler->get(Request::getInt('plugin_id'));
         }
-        $obj->setVar('plugin_online', Request::getInt('plugin_online', 0));
-        if ($pluginHandler->insert($obj)) {
+        $pluginsObj->setVar('plugin_online', Request::getInt('plugin_online', 0));
+        if ($pluginHandler->insert($pluginsObj)) {
             $helper->redirect('admin/plugin.php', 3, _AM_XSITEMAP_FORMOK);
         }
-        echo $obj->getHtmlErrors();
+        $GLOBALS['xoopsTpl']->assign('error', $pluginsObj->getHtmlErrors());
         break;
     case 'default':
     default:
-        $templateMain = 'xsitemap_admin_plugins.tpl';
         $adminObject->addItemButton(_AM_XSITEMAP_CREATE_PLUGIN, basename(__FILE__) . '?op=add_plugin', 'add');
         $adminObject->displayButton('left', '');
+        $start  = Request::getInt('start', 0);
+        $limit = Request::getInt('limit', $helper->getConfig('adminpager'));
         $criteria = new \CriteriaCompo();
         $criteria->setSort('plugin_name');
         $criteria->order = 'ASC';
-        $numrows         = $pluginHandler->getCount();
-        $GLOBALS['xoopsTpl']->assign('plugins_count', $numrows);
+        $pluginsCount         = $pluginHandler->getCount();
+        $GLOBALS['xoopsTpl']->assign('plugins_count', $pluginsCount);
+        $criteria->setStart($start);
+        $criteria->setLimit($limit);
         $plugin_arr      = $pluginHandler->getAll($criteria);
         //Display data
-        if ($numrows > 0) {
+        if ($pluginsCount > 0) {
             foreach (array_keys($plugin_arr) as $i) {
                 if (0 == $plugin_arr[$i]->getVar('topic_pid')) {
                     $plugin = $plugin_arr[$i]->getValuesPlugins();
                     $GLOBALS['xoopsTpl']->append('plugins_list', $plugin);
                 }
+            }
+            // Display Navigation
+            if ($pluginsCount > $limit) {
+                require_once XOOPS_ROOT_PATH . '/class/pagenav.php';
+                $pagenav = new \XoopsPageNav($pluginsCount, $limit, $start, 'start', 'op=list&limit=' . $limit);
+                $GLOBALS['xoopsTpl']->assign('pagenav', $pagenav->renderNav(4));
             }
         }
         break;
