@@ -1,6 +1,5 @@
 <div class='top'>
-	<span class='left'><{$navigation}></span>
-	<{if $buttons}>
+	<{if $buttons|default:''}>
 		<span class='left'><{$buttons}></span>
 	<{/if}>
 </div>
