@@ -1,7 +1,7 @@
 <!-- Header -->
 <{include file='db:xsitemap_admin_header.tpl' }>
 
-<{if $plugins_list}>
+<{if $plugins_list|default:''}>
 	<table class='table table-bordered'>
 		<thead>
 			<tr class='head'>
@@ -57,15 +57,17 @@
 		<{/if}>
 	</table>
 	<div class="clear">&nbsp;</div>
-	<{if $pagenav}>
+	<{if isset($pagenav)}>
 		<div class="xo-pagenav floatright"><{$pagenav}></div>
 		<div class="clear spacer"></div>
 	<{/if}>
 <{/if}>
-<{if $form}>
+
+<{if $form|default:''}>
 	<{$form}>
 <{/if}>
-<{if $error}>
+
+<{if $error|default:''}>
 	<div class="errorMsg"><strong><{$error}></strong></div>
 <{/if}>
 
