@@ -5,6 +5,8 @@
 - transfered hard coded admin to templates (goffy)
 - added plugins for wgteams, wgtimlines, wggallery, wgtransifex, wggithub, wgsitenotice (goffy)
 - added plugins for xmnews, xmdocs (goffy)
+- transfered hard coded admin to templates - part 2 (mamba/goffy)
+- added admin pager (goffy)
 
 <h5>1.55 Beta 3 [2021-01-14]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
 <hr>
